--- a/.config/swaync/styles/control-center.css
+++ b/.config/swaync/styles/control-center.css
@@ -1,55 +1,43 @@
-@define-color text            @foreground;
-@define-color background-alt  @color1;
-@define-color selected        @color6;
-@define-color hover           @color5;
-@define-color urgent          @color2;
-
-@define-color main-color      @color13;
-@define-color bg              alpha(@main-color, 0.1);
+@define-color text            #eff3f7;
+@define-color background      #444444;
+@define-color background-alt  alpha(#777777, .4);
+@define-color background-sec  #777777;
+@define-color selected        #777777;
+@define-color hover           alpha(@selected, .4);
+@define-color urgent          #444444;
 
 * {
-  color: @text;
+  color:            @text;
 
   all: unset;
-  font-size: 15px;
-  font-family: "Ndot55";
+  font-size: 14px;
+  font-family: "Noto Sans 11";
   transition: 200ms;
+
 }
 
-/* Avoid 'annoying' backgroud */
-.blank-window {  
-  background: transparent;  
-}
-  
-/* ------------------- CONTROL CENTER --------------------- */
+/* CONTROL CENTER ------------------------------------------------------------------------ */
 
 .control-center {
-  background: @bg;
-  border-radius: 6px;
-  border: 2px solid @bg;
-  margin: 18px;
+  background: alpha(@background, .1);
+  border-radius: 24px;
+  border: 1px solid @selected;
+  box-shadow: 0 0 0 0 rgba(0,0,0,.6);
   padding: 12px;
+  margin: 18px;
 }
 
-/* ------------------- Notifications ---------------------- */
-
+/* Notifications  */
 .control-center .notification-row .notification-background,
 .control-center .notification-row .notification-background .notification.critical {
   background-color: @background-alt;
-  border: 2px solid @hover;
-  border-radius: 6px;
+  border-radius: 8px;
   margin: 4px 0px;
-  padding: 2px;
+  padding: 0px;
 }
 
 .control-center .notification-row .notification-background .notification.critical {
-  border: 2px solid #a7091b;
-  border-radius: 4px;
-  margin: 0px 0px;
-}
-
-.control-center .notification-row .notification-background .notification.critical .summary {
-  color: #a7091b;
+  color: @urgent;
 }
 
 .control-center .notification-row .notification-background .notification .notification-content {
@@ -58,14 +46,14 @@
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * {
-  min-height: 3.4em;
+  min-height: 3.0em;
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action {
-  background: alpha(@selected, 0.6);
+  background: alpha(@selected, .6);
   color: @text;
-  border-radius: 6px;
-  margin: 6px;
+  border-radius: 0px 0px 8px 8px;
+  margin: 0px;
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
@@ -73,14 +61,14 @@
 }
 
 .control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
-  background: @selected;
+  background-color: @selected;
 }
 
-/* ---------------------- Buttons ------------------------- */
+/* Buttons */
 
 .control-center .notification-row .notification-background .close-button {
   background: transparent;
-  border-radius: 3px;
+  border-radius: 10px;
   color: @text;
   margin: 0px;
   padding: 4px;
@@ -94,43 +82,57 @@
   background-color: @selected;
 }
 
-progressbar,
-progress,
-trough {
-  border-radius: 6px;
+/* Sliders */
+
+scale {
+    margin: 0px 1em 0px 1em;
+    padding: 0px;
 }
 
-progressbar {
-  background-color: rgba(255,255,255,.1);
+scale trough {
+  background-color: @background-sec;
+  border-radius: .8rem;
 }
 
-/* ------------ Notifications expanded-group -------------- */
+scale highlight {
+  background-color: #90D5FF;
+  border-radius: .8rem;
+  min-height: 1rem;
+}
+
+scale slider {
+  margin: -10px;
+  padding: 0px;
+  border-radius: 2em;
+  min-width: 1rem;
+  min-height: 1rem;
+  background-color: transparent;
+}
+
+/* Notifications expanded-group */
 
 .notification-group {
   margin: 2px 8px 2px 8px;
-  transition: background 0.15s ease-in-out;
 
 }
 .notification-group-headers {
   font-weight: bold;
   font-size: 1.25rem;
-  color: @main-color;
+  color: @text;
   letter-spacing: 2px;
-  transition: background 0.15s ease-in-out;
 }
 
 .notification-group-icon {
-  color: @main-color;
+  color: @text;
 }
 
 .notification-group-collapse-button,
 .notification-group-close-all-button {
   background: transparent;
-  color: @main-color;
-  margin: 0px; 
-  border-radius: 3px;
-  padding: 0px;
-  transition: background 0.15s ease-in-out;
+  color: @text;
+  margin: 4px; 
+  border-radius: 6px;
+  padding: 4px;
 }
 
 .notification-group-collapse-button:hover,
@@ -138,31 +140,18 @@ progressbar {
   background: @hover;
 }  
 
-.control-center .control-center-list .notification .notification-default-action:hover,
-.control-center .control-center-list .notification .notification-action:hover {
-  background: @hover;
-  border-radius: 3px;
-}
+/* WIDGETS --------------------------------------------------------------------------- */
 
-.notification-group.collapsed:hover .notification-row:not(:only-child) .notification {
-  background: @hover;
-  border-radius: 3px;
-}
-
-/* ----------------------- WIDGETS ------------------------ */
-
-  /* ------------ Notification clear button --------------- */
-
+  /* Notification clear button */
 .widget-title {
-  font-weight: bold;
-  color: @main-color;
+  font-size: 1.2em;
   margin: 6px;
 }
 
 .widget-title button {
   background: @background-alt;
-  border-radius: 20px;
-  padding: 4px 10px;
+  border-radius: 6px;
+  padding: 4px 16px;
 }
 
 .widget-title button:hover {
@@ -176,15 +165,17 @@ progressbar {
   /* Do not disturb */
 .widget-dnd {
   margin: 6px;
-  font-weight: bold;
-  color: @main-color;
+  font-size: 1.2rem;
 }
 
 .widget-dnd > switch {
   background: @background-alt;
-  border-radius: 20px;
+  font-size: initial;
+  border-radius: 8px;
   box-shadow: none;
-  padding: 3px;
+  padding: 2px;
+  min-height: 1.2em;
+  min-width: 3.0em;
 }
 
 .widget-dnd > switch:hover {
@@ -192,7 +183,7 @@ progressbar {
 }
 
 .widget-dnd > switch:checked {
-  background: @selected;
+  background: @hover;
 }
 
 .widget-dnd > switch:checked:hover {
@@ -201,42 +192,57 @@ progressbar {
 
 .widget-dnd > switch slider {
   background: @text;
-  border-radius: 20px;
+  border-radius: 6px;
 }
 
-/* -------------------- Music player ---------------------- */
+  /* Music player */
+.widget-mpris {
+    background: transparent;
+    border-radius: 16px;
+    color: @text;
+    margin:  1px;
+}
 
-  /* Background need *opacity 1* otherwise will turn into the album art blurred  */
+  /* NOTE: Background need *opacity 1* otherwise will turn into the album art blurred  */
 .widget-mpris-player {
-    border-radius: 6px;
-    padding: 10px;
-    margin: 10px;
-    background-color: @mpris-album-art-overlay;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .65);
+    background-color: @background-sec;
+    border-radius: 22px;
+    padding: 6px 14px;
+    margin: 6px;
+}
+
+.widget-mpris > box > button {
+  color: @text;
+  border-radius: 20px;
 }
  
 .widget-mpris button {
-  color: alpha(@text, 0.6);
+  color: alpha(@text, .6);
 }
 
 .widget-mpris button:hover {
-  background: alpha(@main-color, 0.5);
-  color: @background-alt;
-  border-radius: 3px;
+  color: @text;
 }
 
 .widget-mpris-album-art {
-  border-radius: 3px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
+  border-radius: 16px;
 }
  
 .widget-mpris-title {
-    font-weight: bold;
-    font-size: 1.10rem;
-    padding-bottom: 2px;
+    font-weight: 700;
+    font-size: 1rem;
 }
  
 .widget-mpris-subtitle {
-    font-weight: normal;
-    font-size: 0.85rem;
+    font-weight: 500;
+    font-size: 0.8rem;
+}
+
+/* Volume */
+.widget-volume {
+  background: transparent;
+  color: @text;
+  padding: 4px;
+  margin: 6px;
+  border-radius: 6px;
 }
