--- a/waybar/style.css
+++ b/waybar/style.css
@@ -33,7 +33,7 @@ window#waybar {
 }
 
 #workspaces button {
-  padding: 0px 5px;
+  padding: 2px 5px 0px 5px;
   margin: 5px 3px;
   border: 0px;
   border-radius: 15px;
@@ -99,7 +99,7 @@ window#waybar {
 #tray {
   background-color: alpha(darker(#444444), 0.6);
   border-radius: 15px;
-  margin: 2px 5px;
+  margin: 4px 5px;
   padding: 1px 10px 0px 10px;
 }
 
