--- a/waybar/style.css
+++ b/waybar/style.css
@@ -144,7 +144,7 @@ tooltip label {
 menu {
 	border-radius: 10px;
   padding: 2px 5px 2px 5px;
-  background: #eff3f7;
+  background: #efefef;
   color: #444444;
 }
 
