--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,5 +1,5 @@
 * {
-  color: #eff3f7;
+  color: #444444;
   border: none;
   margin: none;
 }
@@ -10,8 +10,8 @@ window {
   font-size: 24px;
   font-family: "Futura Std";
 
-  color: #eff3f7;
-  background-color: alpha(#444444, 0.6);
+  color: #444444;
+  background-color: alpha(#efefef, 0.6);
 }
 
 #outer-box {
@@ -29,7 +29,7 @@ window {
   background-color: transparent;
   padding: 15px 0px 6px 0px;
   margin: 0px 20px 15px 20px;
-  border-bottom: 2px solid #777777;
+  border-bottom: 2px solid #666666;
 }
 
 #input:focus {
@@ -52,7 +52,7 @@ window {
 
 #entry:selected {
   padding-left: 20px;
-  background-color: alpha(#aaaaaa, 0.6);
+  background-color: alpha(#8f8f8f, 0.6);
   transition: all 0.3s ease-in-out;
 }
 
